크로니클 큐 추가중 size 제거 필요