@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'net.openhft:chronicle-map:3.21ea1'
+    implementation 'net.openhft:chronicle-queue:5.24ea6'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -39,4 +40,31 @@ tasks.named('test') {
     jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
     jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
     jvmArgs '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
+}
+
+tasks.named('bootRun') {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
 }
